# Game_Jam_2013.10-1.0

./: AUTHORS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  cleanup.sh  config.h  config.status  configure  configure.ac
assets/: Makefile  Makefile.am  Makefile.in
autom4te.cache/: output.1  traces.0  traces.1
include/: audio.h  character.h  events.h  game.h  gameobject.h  initscreen.h  level.h  light.h  npc.h  nuvem.h  primitives.cpp  primitives.h  prog  sdlutil.h  testa_primitivas.cpp
source/: Makefile  Makefile.am  Makefile.in  audio.cpp  candlelight  character.cpp  game.cpp  gameobject.cpp  initscreen.cpp  level.cpp  main.cpp  sdlutil.cpp  timer.cpp
source/.deps/: audio.Po  character.Po  game.Po  gameobject.Po  initscreen.Po  level.Po  main.Po  sdlutil.Po  timer.Po
