assetsdir = $(prefix)/games/$(PACKAGE)/assets
assets_DATA = background.png foo.png gametitle.png light1.png light2.png light3.png presents_theme.wav bigcandle.png blackscreen.png eidle1.png eprotecting1.png ewalking1.png ewalking2.png ewalking3.png ewalking4.png idle1.png protecting1.png walking1.png walking2.png walking3.png walking4.png wind.png pressenter.png titleandbg.png
