#Binaries
bin_PROGRAMS = candlelight

#Program description
candlelight_SOURCES = main.cpp game.cpp sdlutil.cpp timer.cpp character.cpp gameobject.cpp initscreen.cpp level.cpp audio.cpp primitives.cpp

#Libraries needed
candlelight_LDADD = -lSDL -lSDL_image -lSDL_ttf -lSDL_mixer

#Include flags
AM_CPPFLAGS = -I../include -Wall -w -pedantic -ansi
